--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,14 +1,12 @@
 h1{
     font-family: 'Kaushan Script', cursive;
     }
-
-    body{
-        padding: 70px;
-        background-image: url('wall.jpg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+.main-div{
+    background-image: url('wall.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
     .mybtn{
         border-radius:50px;
